# sora-on-rust

./: .env.example  .gitignore  Cargo.toml  Config.toml  GEMINI.md  build.rs
.github/workflows/: release.yml
.idx/: dev.nix
src/: client.rs  config.rs  handler.rs  macros.rs  main.rs  state.rs  utils.rs
src/commands/: cmd.rs  mod.rs
src/commands/downloader/: spotify.rs
src/commands/general/: info.rs  ping.rs
src/commands/group/: add.rs  demote.rs  gc.rs  kick.rs  promote.rs
src/commands/root/: exec.rs  set.rs
src/commands/tools/: debug.rs
src/macros/: mod.rs  send_audio.rs  send_msg.rs  send_video.rs
