[package]
name = "app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whatsapp-rust = "0.3"
whatsapp-rust-sqlite-storage = "0.3"
whatsapp-rust-tokio-transport = "0.3"
whatsapp-rust-ureq-http-client = "0.3"
wacore = "0.3"
waproto = "0.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
log = "0.4.29"
env_logger = "0.11.9"
chrono = "0.4.44"
