[package]
name = "sora-on-rust"
version = "0.1.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whatsapp-rust = "0.5"
whatsapp-rust-tokio-transport = "0.5"
whatsapp-rust-ureq-http-client = "0.5"
wacore = "0.5"
waproto = "0.5"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "fs", "process"] }
log = "0.4.29"
env_logger = "0.11.10"
chrono = "0.4.44"
async-trait = "0.1.89"
linkme = "0.3.35"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
dotenvy = "0.15.7"
dashmap = { version = "6.1.0", features = ["serde"]}
mimalloc = "0.1.48"
sled = "0.34.7"
sysinfo = "0.38.4"
reqwest = { version = "0.13.2", features = ["json", "cookies"]}
rand = { version = "0.10.0", features = ["std"]}
spotapi = "0.2.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
